<resources>
    <string name="app_name">FTP客户端</string>
    <string name="title_activity_file_explorer">文件浏览</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_anonymous">匿名登录</string>
    <string name="login_hostname">主机地址</string>
    <string name="login_port">端口号</string>
    <string name="login_title_server">服务器信息</string>
    <string name="login_title_credential">登录凭据</string>
    <string name="login_button">登录</string>
    <string name="alert_title">错误</string>
    <string name="alert_connection_error">无法建立与服务器的连接，检查主机与端口号是否正确</string>
    <string name="alert_credential_error">用户名或密码错误</string>
    <string name="ok">确定</string>
    <string name="file_disconnect">断开连接</string>
    <string name="file_upload">上传</string>
    <string name="file_server_info">服务器信息</string>
    <string name="file_host_tag">主机：</string>
    <string name="file_port_tag">端口：</string>
    <string name="alert_disconnect_title">断开连接</string>
    <string name="alert_disconnect_message">确认要断开连接吗？</string>
    <string name="cancel">取消</string>
    <string name="file_download_title">下载文件</string>
    <string name="file_download_input_hint">文件名</string>
    <string name="file_download_button">下载</string>
    <string name="alert">提示</string>
    <string name="alert_file_not_exist">文件不存在或无法打开</string>
    <string name="file_transfer_type">传输模式</string>
    <string name="file_connection_type">连接模式</string>
    <string name="file_transfer_ascii">文本模式</string>
    <string name="file_transfer_binary">二进制模式</string>
    <string name="file_connection_passive">被动连接</string>
    <string name="file_connection_active">主动连接</string>
    <string name="alert_format_error">输入格式不正确，应检查后重新输入</string>
    <string name="alert_transfer_mode_not_set">无法设置传输模式</string>
    <string name="alert_connection_mode_not_set">无法设置连接模式</string>
    <string name="alert_upload_fail">上传文件失败</string>
    <string name="alert_dir_not_exist">目录不存在或无法访问</string>
    <string name="alert_conflict_filename">文件名冲突</string>
    <string name="alert_cannot_create_file">无法创建文件</string>
    <string name="alert_download_fail">下载文件失败</string>
    <string name="alert_server_rejection">服务器拒绝了请求</string>
    <string name="alert_net_error">网络错误</string>
    <string name="message_start_transfer">正在传输</string>
    <string name="message_finish_transfer">传输完成</string>
    <string name="file_structure">文件结构</string>
    <string name="mode_stream">流式传输</string>
    <string name="mode_block">块式传输</string>
</resources>